# SolveHydro

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  case_study_proposal.md  dataset_request.md  equation_request.md
.github/workflows/: docs.yml  lint.yml  tests.yml
case_studies/flood/: README.md  config.yaml
src/hydrocomplex/: __init__.py  cli.py
src/hydrocomplex/calibration/: simple_calibrator.py
src/hydrocomplex/core/: metrics.py  timeseries.py  units.py
src/hydrocomplex/formulas/: routing.py  runoff.py
tests/: conftest.py
tests/unit/: test_metrics.py  test_routing.py
